<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/lightGrey"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="310dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:text="RECOMMENDER PLACEHOLDER"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="casual"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="60sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/browseBtn"
            android:layout_marginTop="40dp"
            android:background="@color/mainGreen"
            android:text="@string/browse_btn"
            android:layout_gravity="center_horizontal"
            >
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/createBtn"
            android:layout_marginTop="40dp"
            android:background="@color/mainGreen"
            android:text="@string/create_event"
            android:layout_gravity="center_horizontal"
            >
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:id="@+id/myEventsBtn"
            android:layout_marginTop="40dp"
            android:background="@color/mainGreen"
            android:text="@string/my_events_btn"
            android:layout_gravity="center_horizontal"
            >
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>