<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/smokyWhite">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/smokyWhite"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/mainGreen"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/dashboard_title"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/custom_app_bar_background"
                android:paddingHorizontal="20dp"
                android:orientation="vertical"
                >
                <EditText
                    android:layout_marginTop="70dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="50dp"
                    android:hint="@string/search_bar_hint"
                    android:textColorHint="@color/white"
                    android:paddingLeft="20dp"
                    android:background="@drawable/search_bar_background"
                    android:textColor="@color/white"
                    android:drawableEnd="@drawable/search_btn"
                    android:paddingRight="5dp"
                    ></EditText>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_heading"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    ></TextView>
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/event_amt_text"
                    android:textColor="@color/lightText"
                    android:textSize="20sp"
                    ></TextView>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/mainGreen"
                app:title="@string/dashboard_title"
                app:titleTextColor="@color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_chevron_left_24"
                        android:id="@+id/back_btn">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/midGreen"
                        android:textSize="20sp"
                        android:layout_marginTop="7dp"
                        android:paddingRight="60dp"
                        ></TextView>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:id="@+id/recyclerView">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>