<androidx.core.widget.NestedScrollView     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity"
    android:background="@color/lightGrey"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/mainGreen"
                app:title="@string/dashboard_title"
                app:titleTextColor="@color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_chevron_left_24"
                        android:id="@+id/back_btn">
                    </ImageView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/midGreen"
                        android:textSize="20sp"
                        android:layout_marginTop="7dp"
                        android:paddingRight="60dp"
                        ></TextView>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_event"
                    android:textColor="@android:color/black"
                    android:textSize="40sp"
                    android:layout_gravity="center_horizontal">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="Activity"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>

                <Spinner
                    android:id="@+id/event_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_marginTop="5dp"
                    ></Spinner>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="Location"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:hint="Kronenburgerpark"
                    android:textColorHint="@color/greyDate"
                    android:maxLines="1"
                    android:background="@color/editTextBackground"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:inputType="text"
                    >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="Date"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:hint="30-09"
                    android:textColorHint="@color/greyDate"
                    android:maxLines="1"
                    android:background="@color/editTextBackground"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:inputType="date"
                    >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="Time"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:hint="15:30"
                    android:textColorHint="@color/greyDate"
                    android:maxLines="1"
                    android:background="@color/editTextBackground"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:inputType="time"
                    >
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="Description"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"></TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:hint="We have a football but feel free to bring \nyour own..."
                    android:textColorHint="@color/greyDate"
                    android:background="@color/editTextBackground"
                    android:paddingLeft="20dp"
                    android:textColor="@android:color/black"
                    android:inputType="time"
                    >
                </EditText>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:layout_constraintTop_toBottomOf="@+id/phoneBox"
                    android:layout_marginTop="30dp"
                    android:text="@string/create_event"
                    app:backgroundTint="@color/registerBtn"
                    ></com.google.android.material.button.MaterialButton>

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>